--- a/server/src/email-template/view/registration.hbs
+++ b/server/src/email-template/view/registration.hbs
@@ -5,7 +5,7 @@
 
     <tr>
         <td>
-            <p> Дякуємо на реєстрацію. </p>
+            <p> Дякуємо за реєстрацію. </p>
             <p> Бажаємо гарно провести час на нашій платформі :) </p>
         </td>
     </tr>
